updated inTable method